--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-modal": "^11.4.0",
+    "react-native-multi-slider": "^0.3.6",
     "react-native-router-flux": "^4.0.6",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "rn-range-slider": "^1.2.9"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
