--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "native-base": "^2.13.8",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-image-slider": "^2.0.3",
     "react-native-modal": "^11.4.0",
     "react-native-multi-slider": "^0.3.6",
     "react-native-router-flux": "^4.0.6",
