--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "16.8.6",
     "react-native": "0.60.5",
@@ -17,6 +18,7 @@
     "react-native-multi-slider": "^0.3.6",
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-textarea": "^1.0.3",
     "react-native-vector-icons": "^6.6.0",
     "rn-range-slider": "^1.2.9"
   },
