--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-geolocation-service": "^3.1.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-modal": "^11.4.0",
     "react-native-multi-slider": "^0.3.6",
+    "react-native-phone-input": "^0.2.4",
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-textarea": "^1.0.3",
