--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,10 @@ target 'BarberShop' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
+  pod 'RNFirebase', :path => '../node_modules/react-native-firebase'
+
   target 'BarberShopTests' do
     inherit! :search_paths
     # Pods for testing
