--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "native-base": "^2.13.8",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-country-picker-modal": "^1.9.8",
     "react-native-datepicker": "^1.7.2",
+    "react-native-firebase": "^5.5.6",
     "react-native-geolocation-service": "^3.1.0",
     "react-native-image-slider": "^2.0.3",
+    "react-native-maps": "0.26.1",
     "react-native-modal": "^11.4.0",
     "react-native-multi-slider": "^0.3.6",
     "react-native-phone-input": "^0.2.4",
