--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-firebase": "^5.5.6",
     "react-native-geolocation-service": "^3.1.0",
+    "react-native-google-maps-directions": "^2.1.1",
     "react-native-image-slider": "^2.0.3",
     "react-native-maps": "0.26.1",
     "react-native-modal": "^11.4.0",
