--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-country-picker-modal": "^1.9.8",
     "react-native-datepicker": "^1.7.2",
     "react-native-firebase": "^5.5.6",
+    "react-native-geocoding": "^0.4.0",
     "react-native-geolocation-service": "^3.1.0",
     "react-native-google-maps-directions": "^2.1.1",
     "react-native-image-slider": "^2.0.3",
