--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@twotalltotems/react-native-otp-input": "^1.3.5",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
