--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,6 +188,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-square-in-app-payments')
     implementation project(':react-native-firebase')
     implementation project(':react-native-maps')
     implementation project(':react-native-vector-icons')
