--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,18 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "27.0.0"
-        minSdkVersion = 16
-        compileSdkVersion = 28
-        targetSdkVersion = 28
-        supportLibVersion = "27.0.0"
+        // buildToolsVersion = "27.0.0"
+        // minSdkVersion = 16
+        // compileSdkVersion = 28
+        // targetSdkVersion = 28
+        // supportLibVersion = "27.0.0"
+
+      buildToolsVersion = "28.0.2"
+      minSdkVersion = 21
+      compileSdkVersion = 28
+      targetSdkVersion = 27
+      supportLibVersion = "28.0.0"
+      sqipVersion = "1.3.0"
     }
     repositories {
         google()
