--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-geolocation-service": "^3.1.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-google-maps-directions": "^2.1.1",
+    "react-native-google-places-autocomplete": "^1.6.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-maps": "0.26.1",
     "react-native-modal": "^11.4.0",
