bug fix bug no: 10,15,23,26,27

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,8 @@ target 'BarberShop' do
 
   pod 'RNSquareInAppPayments', :path => '../node_modules/react-native-square-in-app-payments'
 
+  pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
+
   target 'BarberShopTests' do
     inherit! :search_paths
     # Pods for testing
