--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/netinfo": "^5.9.2",
     "@twotalltotems/react-native-otp-input": "^1.3.5",
     "axios": "^0.19.0",
