--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "native-base": "^2.13.8",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-check-box": "^2.1.7",
     "react-native-country-picker-modal": "^1.9.8",
     "react-native-datepicker": "^1.7.2",
     "react-native-firebase": "^5.5.6",
